# estatesale

./: .gitignore  IDEA.md  MVP.md  MVP_REVISED.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/admin-web/: .env.example  next.config.ts  package.json  vitest.config.ts
apps/admin-web/src/app/: globals.css  layout.tsx  page.tsx
apps/admin-web/src/app/api/properties/: route.ts
apps/admin-web/src/app/orders/: page.tsx
apps/admin-web/src/app/review/: page.tsx
apps/admin-web/src/components/: dashboard-shell.tsx  metric-card.tsx  orders-panel.tsx  review-queue.tsx
apps/admin-web/src/lib/: demo-data.ts  types.ts  workflows.ts
apps/admin-web/src/lib/server/: demo-repository.ts  repository.ts
apps/admin-web/tests/: workflows.test.ts
apps/ios/: Package.swift
apps/ios/Sources/EstateSaleCore/: Models.swift  Repository.swift  SellerAppModel.swift
apps/ios/Sources/EstateSaleSellerUI/: SellerDashboardView.swift
apps/ios/Tests/EstateSaleCoreTests/: EstateSaleCoreTests.swift
docs/: mvp-prd-engineering-review-2026-04-16.md  phase-1a-build-checklist-2026-04-16.md
docs/plans/: 2026-04-16-estatesale-build-1.md
services/worker/: README.md  pyproject.toml
services/worker/src/estatesale_worker/: __init__.py  jobs.py  repository.py  types.py
services/worker/src/estatesale_worker/adapters/: intake.py
services/worker/src/estatesale_worker/providers/: easypost.py  ebay.py  uber_direct.py
services/worker/tests/: test_jobs.py  test_retry.py
supabase/: config.toml  seed.sql
supabase/migrations/: 202604170001_initial_schema.sql
(+8 files in other folders)
